# neo4j-agno-agent

./: .env.example  .gitignore  ADVANCED_EMBEDDING_PLAN.md  BETA_INVITE_TEMPLATE.md  CLAUDE.md  Dockerfile  ECOMAP_DRAWIO_TASK.md  EMBEDDING_PLAN.md  LICENSE  MANIFESTO.md  Manifesto_PostParentSupport_Graph.md  README.md  RELEASE_NOTES_v1.0.md  SETUP_GUIDE.md  agent_legacy.py  app.py  app_narrative.py  app_quick_log.py  app_ui.py  docker-compose.yml  main.py  pyproject.toml  retrieve.py  router_config.md  seed_test_log.py  server.py  setup.sh  setup_wizard.py  start.bat  start.command  stop.bat  test_support_log.py  verify_refactor.py
api/: README.md  pyproject.toml
api/app/: config.py  main.py
api/app/agents/: gemini_agent.py  intake_agent.py  model_switch.py  safety_first.py  validator.py
api/app/lib/: chunking.py  db_operations.py  dedup.py  ecomap.py  embedding.py  file_readers.py  normalize.py  utils.py
api/app/routers/: chat.py  clients.py  dashboard.py  dedup.py  ecomap.py  graph.py  meetings.py  narrative_intake.py  narratives.py  quicklog.py  search.py  system.py
api/app/schemas/: agent.py  client.py  dedup.py  ecomap.py  graph.py  meeting.py  narrative.py  narrative_intake.py  search.py
api/app/services/: __init__.py  dedup_service.py  narrative_intake_service.py
api/tests/: conftest.py
api/tests/agents/: test_gemini_agent.py  test_intake_agent.py  test_model_switch.py  test_safety_first.py  test_validator.py
api/tests/lib/: test_chunking.py  test_db_operations.py  test_dedup.py  test_dedup_integration.py  test_embedding.py  test_normalize.py  (+1 more)
(+195 files in other folders)
