[project]
name = "neo4j-agno-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.12",
    "fastapi>=0.115.0",
    "google-genai>=1.55.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.27.0",
    "mcp[cli]>=1.24.0",
    "neo4j>=6.0.3",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.12.5",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "uvicorn>=0.32.0",
    "weasyprint>=67.0",
]
